--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -11,7 +11,8 @@
         <aside>
             <ul>
                 {% for m in menu %}
-                <li><form action="{{ m.url_name }}"><button>{{ m.title }}</button></form></li>
+                <li><a href="{% url m.url_name %}"><button>{{ m.title }}</button></a></li>
+                <!-- <li><form action="{% url m.url_name %}"><button>{{ m.title }}</button></form></li> -->
                 {% endfor %}
             </ul>
         </aside>
