--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -2,5 +2,14 @@
 
 {% block content %}
 <h1>{{title}}</h1>
+<ul>
+    {% for p in menu %}
+    <li>
+        <h2>{{p.title}}</h2>
+        
+        <hr>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
 
