--- a/cars/templates/cars/addpage.html
+++ b/cars/templates/cars/addpage.html
@@ -2,4 +2,28 @@
 
 {% block content %}
 <h1>{{title}}</h1>
+
+<form action="{% url 'addpage' %}" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+
+    <div class="form-error">{{ form.non_field_errors }}</div>
+
+{% for f in form %}
+<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+<div class="form-error">{{ f.errors }}</div>
+{% endfor %}
+
+<button type="submit">Добавить</button>
+</form>
+
+
+    <!-- <button type="submit">Добавить</button>
+</form>
+
+<form action="{% url 'addpage' %}" method="post">
+    {% csrf_token %}
+    {{ form.as_p}}
+    <button type="submit">Добавить</button>
+</form> -->
+
 {% endblock %}
