--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>{{ title }}</title>
-        <!-- <link rel="stylesheet" href="css/style.css" /> -->
+        <link rel="stylesheet" type="text/css" href="{% static 'cars/css/styles.css' %}" />
         <meta charset="utf-8" />
     </head>
     <body>
@@ -12,7 +13,6 @@
             <ul>
                 {% for m in menu %}
                 <li><a href="{% url m.url_name %}"><button>{{ m.title }}</button></a></li>
-                <!-- <li><form action="{% url m.url_name %}"><button>{{ m.title }}</button></form></li> -->
                 {% endfor %}
             </ul>
         </aside>
