--- a/cars/templates/cars/addpage.html
+++ b/cars/templates/cars/addpage.html
@@ -3,9 +3,17 @@
 {% block content %}
 <h1>{{title}}</h1>
 
-<form action="{% url 'addpage' %}" method="post">
+<form action="{% url 'addpage' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p}}
+
+    <div class="form-error">{{ form.non_field_errors }}</div>
+
+{% for f in form %}
+<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+<div class="form-error">{{ f.errors }}</div>
+{% endfor %}
+
+
     <button type="submit">Добавить</button>
 </form>
 
