--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -1,25 +1,39 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{{ title }}</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'cars/css/styles.css' %}" />
-        <meta charset="utf-8" />
-    </head>
-    <body>
-    {% block mainmenu %}
-        <header></header>
-        <aside>
-            <ul>
-                {% for m in menu %}
-                <li><a href="{% url m.url_name %}"><button>{{ m.title }}</button></a></li>
-                {% endfor %}
-            </ul>
-        </aside>
-        <div class="center"></div>
-    {% endblock mainmenu %}
+<head>
+	<title>{{title}}</title>
+	<link type="text/css" href="{% static 'cars/css/styles.css' %}" rel="stylesheet" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+<table class="table-page" border=0 cellpadding="0" cellspacing="0">
+<tr><td valign=top>
+{% block mainmenu %}
+		<div class="header">
+			<ul id="mainmenu" class="mainmenu">
+			<li><a href="{% url 'home' %}"><div class="logo">Главная</div></a></li>
+{% for m in menu %}
+	{% if not forloop.last %}
+			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
+	{% else %}
+			<li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
+	{% endif %}
+{% endfor %}
+			</ul>
+			<div class="clear"></div>
+		</div>
+{% endblock mainmenu %}
 
-    {% block content %}
-    {% endblock %}
-    </body>
+
+
+	<div class="content-text">
+{% block content %}
+{% endblock %}
+	</div>
+
+</td></tr></table>
+<!-- Конец footer'а и страницы -->
+</body>
 </html>
