--- a/cars/templates/cars/post.html
+++ b/cars/templates/cars/post.html
@@ -3,11 +3,9 @@
 {% block content %}
 <h1>{{post.title}}</h1>
 
-
 {% if post.photo %}
-<p><img class="img-article-left" src="{{ post.photo.url }}"></p>
+<p><img class="img-article-left thumb" src="{{ post.photo.url }}"></p>
 {% endif %}
-
 
 {{ post.content }}
 {% endblock %}
