add register.html and login.html

--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -13,12 +13,9 @@
 			<ul id="mainmenu" class="mainmenu">
 			<li><a href="{% url 'home' %}"><div class="home">Главная</div></a></li>
 {% for m in menu %}
-	{% if not forloop.last %}
 			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% else %}
-			<li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	{% endif %}
 {% endfor %}
+			<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
 			</ul>
 		</header>
 {% endblock mainmenu %}
