--- a/cars/templates/cars/register.html
+++ b/cars/templates/cars/register.html
@@ -7,8 +7,8 @@
     {% csrf_token %}
 
     {% for f in form %}
-        <p><label class="form-label" for="{{ f.id_for_label }}">{{ f.label}}: </label>{{ f }}</p>
-        <div class="form-error">{{ f.error }}</div>
+        <p><label class="form-label" for="{{ f.id_label }}">{{ f.label}}: </label>{{ f }}</p>
+        <div class="form-error">{{ f.errors }}</div>
     {% endfor %}
     
     <button type="submit">Регистрация</button>
