--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -32,9 +32,10 @@ header {
 	margin: 40px 0 0 0;
 	background: #eee;
 	border-right: 1px solid #ccc;
-	height: 100vh;
-	float: left;
-	overflow-y: auto;
+	height: 100%;
+	/* float: left; */
+	/* overflow-y: auto; */
+	position:  fixed;
 }
 .left-chapters ul {
 	display: inline-block;
@@ -44,7 +45,7 @@ header {
 	padding: 20px 10px 10px 20px;
 	list-style: none;
 	font-size: 20px;
-	position:  static;
+	position:  fixed;
 }
 .left-chapters ul li {
 	margin: 30px 0 0 0;
