Changed header toolbar register and login

--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <ul>
     {% for p in posts %}
-    <li>
+    <li class="article">
         {% if p.photo %}
 	    <p><img class="img-article-left" src="{{p.photo.url}}" alt="Фото"></p>
         {% endif %}
