--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -1,3 +1,22 @@
+.article {
+	list-style-type: none;
+}
+
+img {max-width: 600px; height: auto;}
+
+img.img-article-left {
+	max-width: 300px;
+	height: auto;
+	float: left;
+	padding: 0 10px 10px 0;
+}
+
+img.img-article-left.thumb {
+	max-width: 150px;
+	height: auto;
+}
+
+
 .container {
 	display: flex;
   }
@@ -32,10 +51,9 @@ header {
 	margin: 40px 0 0 0;
 	background: #eee;
 	border-right: 1px solid #ccc;
-	height: 100%;
-	/* float: left; */
-	/* overflow-y: auto; */
-	position:  fixed;
+	height: 100vh;
+	float: left;
+	overflow-y: auto;
 }
 .left-chapters ul {
 	display: inline-block;
@@ -45,7 +63,7 @@ header {
 	padding: 20px 10px 10px 20px;
 	list-style: none;
 	font-size: 20px;
-	position:  fixed;
+	position:  static;
 }
 .left-chapters ul li {
 	margin: 30px 0 0 0;
@@ -105,13 +123,7 @@ p.link-read-post a {
 	text-decoration: none;
 }
 
-div.article-panel {
-    background: #eee;
-    padding: 5px 10px 5px 10px;
-    box-sizing border-box;
-    overflow: hidden;
-    color: #555;
-}
+
 div.article-panel p.first {
     margin: 0;
     float: left;
