--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -15,7 +15,11 @@
 {% for m in menu %}
 			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
 {% endfor %}
+{% if request.user.is_authenticated %}
+			<li class="last"><a href="{{user.get_absolute_url}}">{{user.username}}</a> | <a href="{% url 'logout' %}">Выйти</a></li>
+{% else %}
 			<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
+{% endif %}
 			</ul>
 		</header>
 {% endblock mainmenu %}
