--- a/cars/templates/cars/profile.html
+++ b/cars/templates/cars/profile.html
@@ -3,8 +3,8 @@
 {% block content %}
 <h1>{{title}}</h1>
 
-{% for p in post %}
-{% if p.author.get_absolute_url == profile.get_absolute_url %}
+{% for p in posts %}
+
 <li class="article">
     {% if p.photo %}
     <p><img class="img-article-left" src="{{p.photo.url}}" alt="Фото"></p>
@@ -14,7 +14,7 @@
     <p class="link-read-post"><a href="{{ p.get_absolute_url }}">Читать пост</a></p>
     <hr>
 </li>
-{% endif %}
+
 {% endfor %}
 
 {% endblock %}
