edited profile.html and index.html

--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -2,10 +2,10 @@
 	list-style-type: none;
 }
 
-img {max-width: 600px; height: auto;}
+img {width: 300px; height: auto;}
 
 img.img-article-left {
-	max-width: 300px;
+	width: 300px;
 	height: auto;
 	float: left;
 	padding: 0 10px 10px 0;
@@ -14,6 +14,7 @@ img.img-article-left {
 img.img-article-left.thumb {
 	max-width: 150px;
 	height: auto;
+	float: left;
 }
 
 
@@ -104,11 +105,11 @@ html, body {
 }
 
 a {
-	color: #0059b2;
+	color: #000000;
 	text-decoration: none;
 }
 a:hover {
-	color: #CC0000;
+	color: #000000;
 	text-decoration: underline;
 }
 
@@ -118,8 +119,7 @@ p.link-read-post {
 p.link-read-post a {
 	padding: 10px;
 	min-width: 100px;
-	background: #333671;
-	color: #fff;
+	color: #ff0000;
 	text-decoration: none;
 }
 
