--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -5,11 +5,12 @@
     {% for p in posts %}
     <li class="article">
         {% if p.photo %}
-        <p><img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото"></p>
+        <p class="link-read-post"><a href="{{ p.get_absolute_url }}">
+            <img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото"></a>
+            <h2><a href="{{ p.get_absolute_url }}">{{ p.brand.name }} {{ p.title }}</a></h2>
+            {{ p.short_content }}
+        </p>
         {% endif %}
-        <h2>{{ p.brand.name }} {{ p.title }}</h2>
-        <p>{{ p.short_content }}</p>  
-        <p class="link-read-post"><a href="{{ p.get_absolute_url }}">Читать пост</a></p>
         <hr>
     </li>
     {% endfor %}
