--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -5,12 +5,10 @@
     {% for p in posts %}
     <li class="article">
         {% if p.photo %}
-        <p class="link-read-post"><a href="{{ p.get_absolute_url }}">
-            <img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото"></a>
-            <h2><a href="{{ p.get_absolute_url }}">{{ p.brand.name }} {{ p.title }}</a></h2>
-            {{ p.short_content }}
-        </p>
+        <p class="link-read-post"><a href="{{ p.get_absolute_url }}"><img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото"></a></p>
         {% endif %}
+        <h2><a href="{{ p.get_absolute_url }}">{{ p.brand.name }} {{ p.title }}</a></h2>
+        <p>{{ p.short_content }}</p>  
         <hr>
     </li>
     {% endfor %}
