--- a/cars/templates/cars/post.html
+++ b/cars/templates/cars/post.html
@@ -8,5 +8,11 @@
 {% endif %}
 
 {{ post.content }}
-<p>Автор: <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a></p>  
+<p>Автор: <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a>
+    {% if request.user.is_authenticated and request.user.is_moder and post.is_published == False %}
+    <form method="POST" action="{% url 'toggle_is_published' post.slug %}">
+        {% csrf_token %}
+        <button type="submit">Изменить статус публикации</button>
+    </form>
+{% endif %}</p>
 {% endblock %}
