--- a/cars/templates/cars/post.html
+++ b/cars/templates/cars/post.html
@@ -8,7 +8,7 @@
 {% endif %}
 
 {{ post.content }}
-<p>Автор: <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a>
+<p>Автор: <a href="{{ post.author.get_absolute_url }}">{{ post.author.first_name }} {{ post.author.last_name }}</a>
     {% if request.user.is_authenticated and request.user.is_moder and post.is_published == False %}
     <form method="POST" action="{% url 'toggle_is_published' post.slug %}">
         {% csrf_token %}
