--- a/cars/templates/cars/post.html
+++ b/cars/templates/cars/post.html
@@ -9,4 +9,12 @@
 
 {{ post.content }}
 <p>Автор: <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a></p>  
+<form method="POST" action="{% url 'add_like' post.slug %}">
+    {% csrf_token %}
+    {% if request.user.is_authenticated %}
+    <button type="submit">{{post.likes_amount}}</button>
+    {% else %}
+    <p>{{post.likes_amount}}</p>
+    {% endif %}
+</form>
 {% endblock %}
