fixed bags with profiles

--- a/cars/templates/cars/base.html
+++ b/cars/templates/cars/base.html
@@ -23,7 +23,7 @@
 {% endif %}
 
 {% if request.user.is_authenticated %}
-			<li class="last"><a href="{{user.get_absolute_url}}"><img class="user-photo">{{ user.photo }}{{user.username}}</a> | <a href="{% url 'logout' %}">Выйти</a></li>
+			<li class="last"><a href="{{user.get_absolute_url}}"><img class="user-photo" src="/media/{{ user.photo }}">{{user.username}}</a> | <a href="{% url 'logout' %}">Выйти</a></li>
 {% else %}
 			<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
 {% endif %}
