--- a/cars/templates/cars/post.html
+++ b/cars/templates/cars/post.html
@@ -9,10 +9,14 @@
 
 {{ post.content }}
 <p>Автор: <a href="{{ post.author.get_absolute_url }}">{{ post.author.first_name }} {{ post.author.last_name }}</a>
+
+    <!-- кнопка модерации -->
     {% if request.user.is_authenticated and request.user.is_moder and post.is_published == False %}
     <form method="POST" action="{% url 'toggle_is_published' post.slug %}">
         {% csrf_token %}
         <button type="submit">Опубликовать</button>
     </form>
+
+    
 {% endif %}</p>
 {% endblock %}
