--- a/cars/templates/cars/profile.html
+++ b/cars/templates/cars/profile.html
@@ -3,18 +3,24 @@
 {% block content %}
 <h1>{{ title }}</h1>
 
-{% for p in posts %}
-<li class="article">
-    {% if p.photo %}
-    <p class="link-read-post"><a href="{{ p.get_absolute_url }}"><img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото"></a></p>
-    {% endif %}
-    <h2><a href="{{ p.get_absolute_url }}">{{ p.brand.name }} {{ p.title }}</a></h2>
-    <p>{{ p.short_content }}</p>
-    {% if p.is_published == False %}
-    <p class="link-read-post"><a>На проверке</a></p>
-    {% endif %}
-    <hr>
-</li>
-{% endfor %}
+{% if empty_message %}
+<p>{{ empty_message }}</p>
+{% else %}
+<ul>
+  {% for p in posts %}
+  <li class="article">
+      {% if p.photo %}
+      <p class="link-read-post"><a href="{{ p.get_absolute_url }}"><img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото"></a></p>
+      {% endif %}
+      <h2><a href="{{ p.get_absolute_url }}">{{ p.brand.name }} {{ p.title }}</a></h2>
+      <p>{{ p.short_content }}</p>
+      {% if p.is_published == False %}
+      <p class="link-read-post"><a>На проверке</a></p>
+      {% endif %}
+      <hr>
+  </li>
+  {% endfor %}
+</ul>
+{% endif %}
 
 {% endblock %}
