--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -1,8 +1,97 @@
+html, body {
+	margin: 0;
+}
+
+header {
+	display: flex;
+	margin: 0;
+	width: 100%;
+	height: 60px;
+	position: fixed;
+	background-color: #f6f4f4;
+}
+
+.content-text {
+	display: inline-block;
+	margin: 60px 0 0 30px;
+	color: #000;
+	font-size: 20px;
+	font-family: Yandex Sans Display Light;
+	height: 100%;
+	width: 100%;
+	flex-grow: 1;
+}
+.content-text h1 {font-size: 32px;}
+
+.brand {
+	
+}
+
+.content {
+	margin: 70px 0 0 0;
+}
+
+.headline {
+	font-family: sans-serif;
+	font-size: 60px;
+	font-weight: bold;
+	float: right;
+	margin: 10px 50px;
+}
+
+.triangle-right {
+	margin: 5px;
+	width: 0;
+	height: 0;
+	border-top: 15px solid transparent;
+	border-left: 30px solid #0ad3ea;
+	border-bottom: 15px solid transparent;
+	float: right;
+}
+
+.filters {
+	margin: 20px -30px;
+	position: fixed;
+	height: 40px;
+	width: 700px;
+	background-color: #f6f4f4;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+	left: -630px;
+}
+
+ul.mainmenu {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 60px;
+	color: #0ad3ea;
+	font-size: 20px;
+	overflow: hidden;
+}
+ul.mainmenu li {
+	float: left;
+	margin: 18px 5px 0 30px;
+}
+ul.mainmenu li.logo {margin: 0;}
+ul.mainmenu li.last {
+	float: right;
+}
+
+ul.mainmenu li a {
+	font-family: "Trebuchet MS";
+	font-weight: bold;
+	color: #0ad3ea;
+	text-decoration: none;
+}
+ul.mainmenu li a:hover {
+	color: #0ad3ea;
+}
+
 .article {
 	list-style-type: none;
 }
-
-
 
 img {width: 300px; height: auto;}
 
@@ -20,32 +109,11 @@ img.img-article-left.thumb {
 }
 
 img.user-photo {
-	width: 20px;
-	height: auto;
+	border-radius: 100%;
+	margin: 5px 10px 0 0;
+	width: 50px;
+	height: 50px;
 	float: right;
-}
-
-.container {
-	display: flex;
-  }
-
-.content-text {
-	display: inline-block;
-	margin: 60px 0 0 30px;
-	color: #000;
-	font-size: 20px;
-	font-family: Yandex Sans Display Light;
-	height: 100%;
-	overflow-y: auto;
-	flex-grow: 1;
-}
-.content-text h1 {font-size: 32px;}
-
-header {
-	background: #fde61b;
-	height: 60px;
-	position:  fixed;
-	width: 100%;
 }
 
 .home {
@@ -55,61 +123,7 @@ header {
 	height: 60px; */
 }
 
-.left-chapters {
-	margin: 40px 0 0 0;
-	background: #eee;
-	border-right: 1px solid #ccc;
-	height: 100vh;
-	float: left;
-	overflow-y: auto;
-}
-.left-chapters ul {
-	display: inline-block;
-	width: 230px;
-	height: 100%;
-	margin: 0;
-	padding: 20px 10px 10px 20px;
-	list-style: none;
-	font-size: 20px;
-	position:  static;
-}
-.left-chapters ul li {
-	margin: 30px 0 0 0;
-	color: #999;
-}
-.left-chapters ul li.selected {color: #0059b2; }
-.left-chapters ul li a {
-	color: #444;
-	text-decoration: none;
-}
-.left-chapters ul li a:hover { color: #CC0000; }
-.left-chapters ul li.share {margin: 60px 0 0 0;}
-.left-chapters ul li.share p {margin: 30px 0 30px 0;}
-.left-chapters ul li.share a {
-	display: inline-block;
-	width: 40px;
-	height: 40px;
-	margin: 0 20px 0 0;
-}
-.left-chapters ul li.share a.share-yt {
-	width: 100%;
-	height: 30px;
-	background: url('../images/share_yt.png') no-repeat 0 0
-}
-.left-chapters ul li.share a.share-yt:hover {
-	width: 100%;
-	height: 30px;
-	background: url('../images/share_yt.png') no-repeat 0 -30px
-}
 
-html, body {
-	font-family: 'Arial';
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	width: 100%;
-	color: #444;
-}
 
 a {
 	color: #000000;
@@ -154,29 +168,7 @@ ul.list-articles li {
 
 
 
-ul.mainmenu {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	height: 60px;
-	color: #211f1c;
-	font-size: 20px;
-	overflow: hidden;
-}
-ul.mainmenu li {
-	float: left;
-	margin: 18px 40px 0 30px;
-}
-ul.mainmenu li.logo {margin: 0;}
-ul.mainmenu li.last {float: right;}
 
-ul.mainmenu li a {
-	color: #211f1c;
-	text-decoration: none;
-}
-ul.mainmenu li a:hover {
-	color: #211f1c;
-}
 
 .panelitems {
 	text-align: center;
@@ -423,71 +415,3 @@ img.img-article-left.thumb {
 	max-width: 150px;
 	height: auto;
 }
-
-select {
-	cursor: pointer;
-	padding: 5px;
-}
-
-/* Стили для формы фильтрации */
-form {
-	display: flex;
-	align-items: center;
-	margin-bottom: 20px;
-  }
-  
-  label {
-	margin-right: 10px;
-	font-weight: bold;
-  }
-  
-  select {
-	padding: 5px;
-	border-radius: 4px;
-	border: 1px solid #ccc;
-  }
-  
-  button[type="submit"] {
-	padding: 5px 10px;
-	border: none;
-	background-color: #007bff;
-	color: #fff;
-	border-radius: 4px;
-	cursor: pointer;
-  }
-  
-  /* Стили для списка записей */
-  ul {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-  }
-  
-  .article {
-	margin-bottom: 20px;
-  }
-  
-  .link-read-post a {
-	text-decoration: none;
-  }
-  
-  .img-article-left {
-	width: 100px;
-	height: 100px;
-	object-fit: cover;
-	margin-right: 10px;
-  }
-  
-  h2 {
-	margin-top: 0;
-  }
-  
-  p {
-	margin-bottom: 10px;
-  }
-  
-  hr {
-	border: none;
-	border-top: 1px solid #ccc;
-  }
-  
