--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -1,17 +1,21 @@
 {% extends 'cars/base.html' %}
 
 {% block content %}
-<form action="{% url 'home' %}" method="GET">
-    <select id="brand-filter" name="brand">
-        <option value="">Выберите фирму</option>
-        {% for brand in brands %}
-            <option value="{{ brand.slug }}" {% if request.GET.brand == brand.slug %} selected {% endif %}>{{ brand.name }}</option>
-        {% endfor %}
-    </select>
-    <button type="submit">Применить</button>
-</form>
+<div class="filters">
+    <div class="triangle-right"></div>
+    <form action="{% url 'home' %}" method="GET">
+        <select id="brand-filter" name="brand">
+            <option value="">Выберите фирму</option>
+            {% for brand in brands %}
+                <option value="{{ brand.slug }}" {% if request.GET.brand == brand.slug %} selected {% endif %}>{{ brand.name }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit">Применить</button>
+    </form>
+</div>
 
-<ul>
+<p class="headline">Статьи об автомобилях</p>
+<ul class="content">
     {% for p in posts %}
     <li class="article">
         {% if p.photo %}
