--- a/cars/templates/cars/profile.html
+++ b/cars/templates/cars/profile.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <h1>{{ title }}</h1>
+{% if request.user.is_authenticated and user.get_absolute_url == request.path %}
+<a href=""><button type="submit">Изменить</button></a>
+{% endif %}
 
 {% for p in posts %}
 <li class="article">
