--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -1,5 +1,7 @@
 html, body {
 	margin: 0;
+	overflow-x: hidden;
+	display: block;
 }
 
 header {
@@ -24,7 +26,7 @@ header {
 .content-text h1 {font-size: 32px;}
 
 .content {
-	margin: 70px 0 0 0;
+	margin: 30px 0 0 0;
 }
 
 .headline {
@@ -32,7 +34,7 @@ header {
 	font-size: 60px;
 	font-weight: bold;
 	float: right;
-	margin: 10px 50px;
+	margin: 10px 50px 0 0;
 }
 
 .triangle-right {
@@ -114,41 +116,99 @@ ul.mainmenu li a:hover {
 	color: #0aabea;
 }
 
-.article {
+.left {
+	list-style-type: none;
 	display: block;
 	width: 1200px;
 	height: 200px;
 	background-color: #f6f4f4;
-	border-radius: 30px;
+	border-radius: 40px;
 	float: right;
-	margin: 10px 25px;
+	margin: 15px 35px 15px 0;
+	transition: all transform 0.2s;
 }
 
-/* .home {
-	margin: 40;
-} */
-
-.article li {
+.left:hover {
 	list-style-type: none;
+	display: block;
+	width: 1210px;
+	height: 210px;
+	background-color: #f6f4f4;
+	border-radius: 40px;
+	float: right;
+	margin: 10px 35px 10px 0;
+	transition: all transform 0.5s;
 }
+
+.right {
+	list-style-type: none;
+	display: block;
+	width: 1200px;
+	height: 200px;
+	background-color: #f6f4f4;
+	border-radius: 40px;
+	float: right;
+	margin: 15px 35px 15px 0;
+	transition: all transform 0.2s;
+}
+
+.right:hover {
+	list-style-type: none;
+	display: block;
+	width: 1210px;
+	height: 210px;
+	background-color: #f6f4f4;
+	border-radius: 40px;
+	float: right;
+	margin: 10px 35px 10px 0;
+	transition: all transform 0.5s;
+}
+
+
+
+.title {
+	margin: 20px 0 0 30px ;
+	font-family: sans-serif;
+	font-size: 60px;
+	font-weight: bold;
+	float: left;
+	text-transform: uppercase;
+	transition: all transform 0.5s;
+}
+
+.short_content {
+	margin: 100px 350px 0 30px;
+	font-family: "Trebuchet MS";
+	font-weight: bold;
+	color: #0aabea;
+	text-decoration: none;
+}
+
 
 img {width: 300px; height: auto;}
 
 img.img-article-left {
+	height: 100%;
 	width: 300px;
-	height: auto;
-	float: left;
-	padding: 0 10px 10px 0;
-}
-
-img.img-article-left.thumb {
-	height: 200px;
-	width: auto;
 	float: right;
 	margin: 0 -5px;
 	border-top-right-radius: 30px;
 	border-bottom-right-radius: 30px;
+	object-fit: cover;
+	overflow: hidden;
 }
+
+img.img-article-right {
+	height: 100%;
+	width: 300px;
+	float: right;
+	margin: 0 -5px;
+	border-top-right-radius: 30px;
+	border-bottom-right-radius: 30px;
+	object-fit: cover;
+	overflow: hidden;
+}
+
 
 img.user-photo {
 	border-radius: 100%;
@@ -164,7 +224,7 @@ a {
 }
 a:hover {
 	color: #000000;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 
@@ -198,14 +258,18 @@ ul.list-articles li {
 	border-bottom: 1px solid #ccc;
 }
 
+.content {
+	padding: 40px 20px 20px 40px;
+	width: 100%;
+	box-sizing: border-box;
+}
 
 
 
 
 
 
-
-/* .panelitems {
+.panelitems {
 	text-align: center;
 }
 
@@ -257,11 +321,7 @@ div.button {
 
 
 
-.content {
-	padding: 40px 20px 20px 40px;
-	width: 100%;
-	box-sizing: border-box;
-}
+
 
 ul.breadcrumbs {
 	margin: 0;
@@ -449,4 +509,4 @@ img.img-article-left {
 img.img-article-left.thumb {
 	max-width: 150px;
 	height: auto;
-} */
+}
