--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -17,15 +17,27 @@
 <p class="headline">Статьи об автомобилях</p>
 <ul class="content">
     {% for p in posts %}
+    {% if forloop.counter|divisibleby:2 %}
     <a class="article" href="{{ p.get_absolute_url }}">
-        <li>
+        <li class="left">
             {% if p.photo %}
-            <img class="img-article-left thumb" src="/media/{{ p.photo }}" alt="Фото">
+            <img class="img-article-left" src="/media/{{ p.photo }}" alt="Фото">
             {% endif %}
-            <!-- <p><a href="{{ p.get_absolute_url }}">{{ p.brand.name }} {{ p.title }}</a></p>
-            <p>{{ p.short_content }}</p>   -->
+            <p class="title">{{ p.brand.name }} {{ p.title }}</p>
+            <p class="short_content">{{ p.short_content }}</p>
         </li>
     </a>
+    {% else %}
+    <a class="article" href="{{ p.get_absolute_url }}">
+        <li class="right">
+            {% if p.photo %}
+            <img class="img-article-right" src="/media/{{ p.photo }}" alt="Фото">
+            {% endif %}
+            <p class="title">{{ p.brand.name }} {{ p.title }}</p>
+            <p class="short_content">{{ p.short_content }}</p>
+        </li>
+    </a>
+    {% endif %}
     {% endfor %}
 </ul>
 {% endblock %}
