try to change this shit

--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -23,4 +23,5 @@
     </li>
     {% endfor %}
 </ul>
+<a href="{% url 'editprofile' %}" class="btn btn-sm btn-primary">Редактировать профиль</a>
 {% endblock %}
