--- a/cars/templates/cars/profile.html
+++ b/cars/templates/cars/profile.html
@@ -22,5 +22,6 @@
   {% endfor %}
 </ul>
 {% endif %}
+<a href="{% url 'editprofile' %}" class="btn btn-sm btn-primary">Редактировать профиль</a>
 
 {% endblock %}
