added edit profile feature

--- a/cars/templates/cars/edit_profile.html
+++ b/cars/templates/cars/edit_profile.html
@@ -12,6 +12,6 @@
 <div class="form-error">{{ f.errors }}</div>
 {% endfor %}
 
-    <button type="submit">Войти</button>
+    <button type="submit">Сохранить изменения</button>
 </form>
 {% endblock %}
