--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -5,24 +5,6 @@ html, body {
 }
 
 header {
-img {width: 300px; height: auto;}
-img.img-article-left {
-	width: 300px;
-	height: auto;
-	float: left;
-	padding: 0 10px 10px 0;
-}
-img.img-article-left.thumb {
-	max-width: 150px;
-	height: auto;
-	float: left;
-}
-img.user-photo {
-	width: 20px;
-	height: auto;
-	float: right;
-}
-.container {
 	display: flex;
 	margin: 0;
 	width: 100%;
@@ -43,27 +25,66 @@ img.user-photo {
 }
 .content-text h1 {font-size: 32px;}
 
-header {
-	background: #fde61b;
-	height: 60px;
-	position:  fixed;
-	width: 100%;
+.content {
+	margin: 30px 0 0 0;
 }
 
-.home {
-	margin: 40;
-	/* background: url('../images/logo.png') no-repeat 10px 5px;
-	width: 70px;
-	height: 60px; */
+.headline {
+	font-family: sans-serif;
+	font-size: 60px;
+	font-weight: bold;
+	float: right;
+	margin: 10px 50px 0 0;
 }
 
-.left-chapters {
-	margin: 40px 0 0 0;
-	background: #eee;
-	border-right: 1px solid #ccc;
-	height: 100vh;
-	float: left;
-	overflow-y: auto;
+.triangle-right {
+	display: block;
+	margin: 7px;
+	width: 0;
+	height: 0;
+	border-top: 13px solid transparent;
+	border-left: 30px solid #0aabea;
+	border-bottom: 13px solid transparent;
+	float: right;
+}
+
+.filters {
+	margin: 20px -30px;
+	position: fixed;
+	height: 40px;
+	width: 700px;
+	background-color: #f6f4f4;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+	left: -628px;
+	transition: all 0.5s;
+	transition-delay: 0.5s;
+}
+
+.filters:hover {
+	left: 28px;
+	transition: all 0.5s;
+}
+
+.apply-filters {
+	margin: 0 29px;
+	float: right;
+	padding: 5px 10px;
+	border: none;
+	background-color: #0aabea;
+	color: #fff;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.filter {
+	margin: 7px 5px 0 30px;
+}
+  
+select {
+	padding: 4px;
+	border-radius: 4px;
+	border: 1px solid #ccc;
 }
 
 ul.mainmenu {
@@ -465,4 +486,9 @@ img.img-article-left {
 img.img-article-left.thumb {
 	max-width: 150px;
 	height: auto;
+}
+
+form {
+    display: flex !important;
+    flex-direction: column !important;
 }
