--- a/cars/static/cars/css/styles.css
+++ b/cars/static/cars/css/styles.css
@@ -124,7 +124,7 @@ ul.mainmenu li a:hover {
 	background-color: #f6f4f4;
 	border-radius: 40px;
 	float: left;
-	margin: 15px 35px 15px 0;
+	margin: 15px 0 15px -10px;
 	transition: all transform 0.2s;
 }
 
@@ -136,7 +136,7 @@ ul.mainmenu li a:hover {
 	background-color: #f6f4f4;
 	border-radius: 40px;
 	float: left;
-	margin: 10px 35px 10px 0;
+	margin: 10px 0 10px -10px;
 	transition: all transform 0.5s;
 }
 
@@ -232,6 +232,8 @@ img.user-photo {
 	width: 50px;
 	height: 50px;
 	float: right;
+	object-fit: cover;
+	overflow: hidden;
 }
 a {
 	color: #000000;
